# PicoGPSDO

./: .clang-format  .gitignore  26MhzOut.pio  CMakeLists.txt  README.md  Readme.md  build.sh  firmware_version.h.in  flash.sh  main.c  pico.py  pico_gpsdo_web.py  requirements.txt
board/: pico_ocxo.h
boards/: pico_ocxo.cmake  pico_ocxo.h
hardware/: Readme.md
hardware/OCXOBoard/: OCXOBoard.kicad_pcb  OCXOBoard.kicad_pro  OCXOBoard.kicad_sch
hardware/ResamplerBoard/: ResamplerBoard.kicad_pcb  ResamplerBoard.kicad_pro  ResamplerBoard.kicad_sch
include/: display.h  gpsdo_control.h  gpsdo_tune.h  ssd1306_font.h  ubx_clean.h  ubx_rx.h
src/: gpsdo_control.c  gpsdo_tune.c  main.c  ubx.c  ubx_rx.c
tests/: CMakeLists.txt  ubx_rx_test.c
